<resources>
    <string name="app_name">DatApp</string>
    <string name="dataview_title">Ingrese sus Datos de Contacto</string>
    <string name="input_name">Nombre Completo</string>
    <string name="input_date">Fecha de Nacimiento</string>
    <string name="input_date_button">Seleccionar Fecha</string>
    <string name="input_phone">Teléfono</string>
    <string name="input_email">Correo Electrónico</string>
    <string name="input_description">Descripción de Contacto</string>
    <string name="dataview_button">Confirmar Datos</string>
    <string name="dataconfirm_title">Revisar Datos</string>
    <string name="dataconfirm_name">Nombre: </string>
    <string name="dataconfirm_date">Fecha de Nacimiento: </string>
    <string name="dataconfirm_phone">Teléfono: </string>
    <string name="dataconfirm_email">Correo Electrónico: </string>
    <string name="dataconfirm_description">Descripción de Contacto: </string>
    <string name="dataconfirm_okbtn">Confirmar Datos</string>
    <string name="dataconfirm_backbtn">Editar Datos</string>

</resources>