<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCF6"
    tools:context=".MainActivity">
    //Title
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/input_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/dataview_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="5dp"
        tools:ignore="MissingConstraints" />
   //Layout for Inputs and Buttons
    <LinearLayout
        android:id="@+id/linear_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_below="@+id/input_view_title">

    //Name Input
        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="6dp"
            android:hint="@string/input_name"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryText"
            app:fontFamily="@font/montserrat"
            tools:ignore="MissingConstraints"
             />
    //Date Input
        <EditText
            android:id="@+id/inputDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/input_date"
            android:layout_marginLeft="6dp"/>

    //Phone Input
        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:inputType="phone"
            android:hint="@string/input_phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryText"
            app:fontFamily="@font/montserrat"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="6dp"/>
    //Email Input
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:inputType="textEmailAddress"
            android:hint="@string/input_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryText"
            app:fontFamily="@font/montserrat"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="6dp"/>
    //Description Input
        <EditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="40dp"
            android:hint="@string/input_description"
            android:inputType="textLongMessage"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryText"
            app:fontFamily="@font/montserrat"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="6dp"
            android:lines="3"/>
    //Confirm data and go to DataConfirmActivity
        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/dataview_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryText"
            app:fontFamily="@font/montserrat"
            android:layout_marginTop="65dp"/>


    </LinearLayout>//end of Layout for Inputs and Button

</androidx.constraintlayout.widget.ConstraintLayout>